feat: 상품(Product) 서비스 분리 및 구현 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port = 8082
 spring.application.name=product-service
 
 # Database Settings (port=5434)
-spring.datasource.url=jdbc:postgresql://localhost:5434/product-service-db
+spring.datasource.url=jdbc:postgresql://product-service-postgres:5432/product-service-db
 spring.datasource.username=sanghyeop
 spring.datasource.password=star15321!
 spring.datasource.driver-class-name=org.postgresql.Driver
